ended LAB3 root